--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,6 +20,12 @@ jobs:
       with:
         dotnet-version: 7.0.102
         
+    - name: Install .NET Workloads
+      shell: pwsh
+      run: |
+        & dotnet tool install --global --version 1.11 uno.check
+        & uno-check --ci --fix --non-interactive --verbose
+
     - name: Build
       run: |
         mkdir -p $GITHUB_WORKSPACE/artifacts
